--- a/public/fonts/index.css
+++ b/public/fonts/index.css
@@ -4,7 +4,10 @@
   font-style: normal;
   src: local('CircularStd'), url('CircularStd-Book.otf') format('opentype');
 }
-
+@font-face {
+  font-family: "NotoSansKR";
+  src: local('NotoSansKR'), url('NotoSansKR-Regular.ttf') format('opentype');
+}
 @font-face {
   font-family: 'CircularStd';
   font-weight: 500;
